# AnchorFX

./: .gitignore  PROGRESS.md  README.md  justfile
.github/workflows/: ci.yml
contracts/anchorfx-escrow/: Cargo.toml
contracts/anchorfx-escrow/src/: lib.rs  oracle.wasm
contracts/anchorfx-oracle/: Cargo.toml
contracts/anchorfx-oracle/src/: lib.rs
docs/: SECURITY.md  instaward-proposal.md  mainnet-checklist.md  pitch-deck.md  test-output.txt  user-feedback-50.csv
frontend/: .env.example  LICENSE  README.md  capture-proof.cjs  capture-screenshots.cjs  cbordep.cjs  create-custom-sac.cjs  create-escrows-v2.cjs  create-escrows.cjs  debug-send.cjs  debug-send2.cjs  deploy-contract.cjs  deploy-sac.cjs  deploy-v2.cjs  deploy.cjs  deploy2.cjs  deploy3.cjs  futuredep.cjs  gzipdeploy.cjs  gzipdeploy2.cjs  interactions.cjs  next.config.ts  package-lock.json  package.json  rawdeploy.cjs  record-demo.cjs  test-send.cjs  trust2.cjs  trustline.cjs  tsconfig.json  vitest.config.ts
frontend/__tests__/: rate-limit.test.ts  validation.test.ts
frontend/app/: error.tsx  loading.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/anchors/: page.tsx
frontend/components/: faq.tsx  features.tsx  final-cta.tsx  footer.tsx  header.tsx  hero.tsx  how-it-works.tsx  pricing.tsx  providers.tsx  skip-to-content.tsx  stats.tsx  testimonials.tsx  wallet-provider.tsx
frontend/lib/: config.ts  contract-client.ts  env.ts  load-env.cjs  metadata.ts  multi-wallet.ts  rate-limit.ts  relay.ts  stellar.ts  validation.ts
frontend/public/: site.webmanifest
(+16 files in other folders)
