[package]
name = "anchorfx-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22"

[dev-dependencies]
soroban-sdk = { version = "22", features = ["testutils"] }

[profile.release]
opt-level = "s"
overflow-checks = true
debug = 0
strip = "none"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = false
